<resources>
    <string name="textoComienzo">Tus tareas, tu ritmo, tu exito</string>
    <string name="startBtn">"Empezar</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="salir">Salir</string>
    <string name="crearTarea">Crear tarea</string>
    <string name="prioritarias">Prioritarias</string>
    <string name="tituloTarea">Titulo de la tarea</string>
    <string name="descripcionTarea">Descripcion de la tarea</string>
    <string name="tiempoRestante">Quedan </string>
    <string name="numDiasRestante">días</string>
    <string name="noTareas">No hay tareas por el momento</string>
    <string name="tituloAddtarea">Añadir Tarea</string>
    <string name="backBtn">Cancelar</string>
    <string name="nextBtn">Siguiente</string>
    <string name="fechaObjetivo">Fecha objetivo</string>
    <string name="fechaInicio">Fecha inicio</string>
    <string name="progressSpinner">Progreso</string>
    <string name="prioritariaCheckBox">¿Prioritaria?</string>
    <string name="descripcionMenuContextual">Detalles</string>
    <string name="borrarMenuContextual">Borrar</string>
    <string name="editarMenuContextual">Editar</string>
    <string name="insertaDescripcion">Añade una descripcion</string>
    <string name="crearTareabtn">Crear Tarea</string>
    <string name="volverBtn">Volver</string>
    <string name="editarTareaLabel">Editar Tarea</string>
    <string name="app_name">TrassTarea</string>
    <string name="preferencias">Preferencias</string>
    <string name="categoriaVisualizacion">Visualizacion</string>
    <string name="categoriaOrdenacion">Ordenacion</string>
    <string name="categoriaAlmacenamiento">Almacenamiento</string>
    <string name="categoriaRestablecer">Restablecer</string>
    <string name="fuente">Tamaño de fuente</string>
    <string name="tema">Tema</string>
    <string name="criterio">Criterio</string>
    <string name="orden">Orden</string>
    <string name="almacenamientoSd">Almacenamiento en tarjeta SD</string>
    <string name="limpiezaArchivos">Limpieza de archivos</string>
    <string name="bbdd">Base de datos externa</string>
    <string name="nombreBbdd">Nombre Base de datos</string>
    <string name="ipBbdd">IP</string>
    <string name="usuarioBbdd">Usuario</string>
    <string name="puertoBbdd">Puerto</string>
    <string name="contrasenaBbdd">Contraseña</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="archivosAsociados">Archivos asociados</string>

</resources>