<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuCrearTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/add"
        android:title="@string/crearTarea"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/prioritarias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/prioritarias"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menuAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/acerca_de" />
    <item
        android:id="@+id/menuSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/salir" />
</menu>