<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.SecondFragment">

    <EditText
        android:id="@+id/tv_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insertaDescripcion"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="@string/crearTareabtn" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="@string/volverBtn" />
</LinearLayout>