<!-- activity_detalle_tarea.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DescripcionActivity">

    <TextView
        android:id="@+id/descripcionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/descripcionTarea"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/descripcion_text_view"
        app:layout_constraintStart_toStartOf="@+id/descripcion_text_view" />

    <TextView
        android:id="@+id/archivosTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="368dp"
        android:text="@string/archivosAsociados"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_video"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="136dp"
        android:background="@color/ligth_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_video"
        app:layout_constraintStart_toStartOf="@+id/txt_image"
        app:srcCompat="@drawable/icons8_v_deo_50" />

    <TextView
        android:id="@+id/txt_video"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_audio"
        app:layout_constraintTop_toBottomOf="@+id/txt_image" />

    <ImageButton
        android:id="@+id/btnDocument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:background="@color/ligth_blue"
        app:layout_constraintBottom_toTopOf="@+id/txt_document"
        app:layout_constraintEnd_toEndOf="@+id/txt_document"
        app:layout_constraintStart_toStartOf="@+id/txt_document"
        app:srcCompat="@drawable/icons8_documento_50" />

    <ImageButton
        android:id="@+id/btnAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="4dp"
        android:background="@color/ligth_blue"
        app:layout_constraintBottom_toTopOf="@+id/txt_audio"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icons8_micr_fono_50" />

    <ImageButton
        android:id="@+id/btnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:background="@color/ligth_blue"
        app:layout_constraintStart_toStartOf="@+id/txt_image"
        app:layout_constraintTop_toBottomOf="@+id/archivosTextView"
        app:srcCompat="@drawable/icons8_imagen_50" />

    <TextView
        android:id="@+id/descripcion_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="181dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <TextView
        android:id="@+id/txt_document"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_image"
        app:layout_constraintEnd_toStartOf="@+id/txt_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_image" />

    <TextView
        android:id="@+id/txt_image"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_document"
        app:layout_constraintTop_toTopOf="@+id/btnImage" />

    <TextView
        android:id="@+id/txt_audio"
        android:layout_width="149dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_video"
        app:layout_constraintEnd_toStartOf="@+id/txt_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVideo" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/dark_blue"
        android:text="@string/volverBtn"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_audio" />

</androidx.constraintlayout.widget.ConstraintLayout>
